# px4_cmd_basic

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  changelog.md  package.xml  setup.py
config/mavros/: px4_config.yaml
config/px4/etc/init.d-posix/: px4-rc.mavlink
docs/: External_Command_doc.md  Manual.md  Qt_doc.md
examples/API/: multiple_external_cmd.cpp  multiple_external_cmd.py  single_external_cmd.cpp  single_external_cmd.py
examples/launch/: square_40agents.launch
include/: vehicle_command.h  vehicle_state.h
include/API/px4_cmd/: custom_command.h  vehicle_external_command.h
include/print_utility/: handle_cin.h  printf_utility.h
include/px4_cmd_rpc_server/: NlohmannJSON.hpp  UAVBridge.hpp  UAVMessage.hpp  px4_cmd_rpc_server.h  rpc_return_code_definations.hpp
launch/: cmd.launch  mavros.launch  mode.launch  sim.launch  sim_cam.launch  sim_fix.launch  sim_fix_cam.launch  video.launch
libs/jsoncpp/: CMakeLists.txt
libs/qcustomplot/: CMakeLists.txt
libs/rpc/: CMakeLists.txt
libs/rpc/install/lib/cmake/rpclib/: rpclibTargets.cmake
libs/tinyxml2/: CMakeLists.txt
msg/: Command.msg
scripts/: add_ip.sh  model_gen.py
scripts/px4_cmd/: __init__.py  custom_command.py  vehicle_external_command.py
shell/: sim_cam.sh  sim_fix.sh  sim_fix_cam.sh
src/API/: custom_command.cpp  vehicle_external_command.cpp
src/main/: recieve_video.cpp  send_command.cpp  set_command.cpp  set_command_fix.cpp  set_mode.cpp
src/px4_cmd_rpc_server/: px4_cmd_rpc_server.cpp
