<?xml version="1.0"?>
<package format="2">
    <name>px4_cmd</name>
    <version>2.1.0</version>
    <description>px4</description>

    <maintainer email="yipeng3@mail2.sysu.edu.cn">Peng Yi</maintainer>
    <license>TODO</license>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <build_depend>tf</build_depend>
    <build_export_depend>tf</build_export_depend>
    <exec_depend>tf</exec_depend>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <exec_depend>std_msgs</exec_depend>
</package>
